<resources>
    <string name="app_name">WendyHu\'s TodoList</string>

    <string name="action_settings">Settings</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="due">Due Date:</string>
    <string name="addition">Additional INFO:</string>
    <string name="type">Type</string>

<!--    type choices-->
    <string name="life">Life</string>
    <string name="study">Study</string>
    <string name="entertainment">Entertainment</string>

    <string name="save">Save</string>

    <string name="hint_date">no letter</string>
    <string name="hint_addition">reminder</string>

    <string name="alert_info">Title or Due Date missing</string>
    <string name="alert_title">Additional Information</string>
    <string name="alert_message">Please enter an Title and a Due Date</string>
</resources>