<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/to_do_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ToDoListFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline" >
        <TableLayout
            android:id="@+id/zoo_inputControls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:shrinkColumns="1"
            android:stretchColumns="1">
            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/todo_titleLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title" />
                <EditText
                    android:id="@+id/todo_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </EditText>
            </TableRow>
            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/todo_descriptionLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />
                <EditText
                    android:id="@+id/todo_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"/>
            </TableRow>
            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/todo_dueLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/due" />
                <EditText
                    android:id="@+id/todo_due"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"/>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:id="@+id/todo_typeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type" />
                <RadioGroup android:id="@+id/todo_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton android:id="@+id/todo_typeLife"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/life" />
                    <RadioButton android:id="@+id/todo_typeStudy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/study" />
                    <RadioButton android:id="@+id/todo_typeEntertainment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/entertainment" />
                </RadioGroup>
            </TableRow>
            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/todo_additionalLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addition" />
                <EditText
                    android:id="@+id/todo_additional"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"/>
            </TableRow>


        </TableLayout>
    </ScrollView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".40" />

    <Button
        android:id="@+id/todo_saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        android:text="@string/save" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todo_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todo_saveButton"/>


</androidx.constraintlayout.widget.ConstraintLayout>